# karteikarten

./: .gitignore  ANALYSE_Heirat_Problem.txt  Bedienung.md  CHANGELOG_Reader.md  CLOUD_VISION_SETUP.md  ERKENNUNGS_HINWEISE.md  EXTRAKTIONSFLUSS_VISUAL.md  EXTRAKTIONSREGELN_VERGLEICH.md  Erkennung_Auswahl.md  GEDCOM_DIALEKT_UNTERSCHIEDE.md  HEIRAT_STRUKTUR.md  Korrekturen_leer.csv  README.md  Reader_Starten.bat  WetzlarErkennung.spec  WetzlarReader.spec  Wetzlar_Starten.bat  _check_chars.py  _compare_values.py  _fix_kb_to_gb.py  _test_date.py  add_backup_func.py  add_backup_method_reader.py  add_full_backup_ui.py  add_restore_func.py  build.bat  build_reader.bat  config.json  config.template.json  config_reader.template.json  create_icon.py  fix_cropped.py  fix_cropped_reader.py  gw.py  instructions.md  karteikarten.db  korrigieren_dateinamen.py  main.py  pyproject.toml  reader_main.py  (+1 more)
MD/: Bedienung.md  Korrektur_Datei.md  PARTNER_STAND_LOGIK.md  README.md  REGEX_BEISPIELE.md  instructions.md
input/: Fehlende Hochzeiten_HJK.xlsx  Quellen-Kennung Titel.csv  SELECT_mit citati.sql  Select.sql  erfasste Hochzeiten_2026-03-17.xlsx  families_ok-0.tsv  families_ok-1.tsv
sql/: cleanup_cropped_online.sql  create_online_schema.sql  lima_sync_endpoint.php  lima_sync_endpoint.template.php
src/: __init__.py  config.py  database.py  extraction_lists.py  extractor.py  gedcom_exporter.py  gui.py  gui.py (Zeile ~870-880)  ocr_engine.py  ocr_spell_checker.py  online_sync.py  reader_gui.py  sources_lib.py  text_postprocessor.py  xlsx_importer.py
