[project]
name = "wetzlar-karteikartenerkennung"
version = "0.4.4"
description = "Add your description here"
readme = "MD/README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.0.0",
    "cryptography>=49.0.0",
    "easyocr>=1.7.2",
    "google-cloud-vision>=3.11.0",
    "openpyxl>=3.1.5",
    "pillow>=12.1.0",
    "pymysql>=1.1.0",
    "pyopenssl>=26.3.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.0",
]

[project.scripts]
main = "main:main"
